<resources>
    <string name="app_name" translatable="false">OKBoys Delivery</string>

    <!--WELCOME ACTIVITY-->
    <string name="text_welcome">Welcome!</string>
    <string name="text_you_have_new_order">You have new orders</string>
    <string name="text_get_started">Get Started</string>
    <string name="text_login">Login</string>
    <string name="text_enter_mob_num">Enter Mobile Number</string>
    <string name="text_get_otp">Get OTP</string>
    <string name="text_otp">OTP</string>
    <string name="text_submit">Submit</string>


    <!--HOME ACTIVITY-->
    <string name="text_home">Home</string>
    <string name="text_orders">Orders</string>
    <string name="text_history">History</string>
    <string name="text_earning">Earning</string>
    <string name="text_on_duty">On Duty</string>
    <string name="text_off_duty">Off Duty</string>

    <string name="label_next">Next</string>
    <string name="label_pay_now">Pay Now</string>
    <string name="label_you_will_receive">You will receive an SMS verification that may apply message and data rates.</string>
    <string name="label_log_in_to_your_account">Log in to your account</string>
    <string name="label_enter_the_4_digit">Enter the 4-digit code</string>


    <!--ORDERS FRAGMENT-->
    <string name="label_created">Created:</string>
    <string name="label_date">Today, 2:40PM</string>
    <string name="label_you_can_earn">You can earn</string>
    <string name="label_distance">Distance</string>
    <string name="label_pick_up">Pick Up</string>
    <string name="label_deliver">Deliver</string>
    <string name="label_deliver_to">Deliver to :</string>
    <string name="label_pick_up_to">Pick up :</string>
    <string name="label_deliver_address">#40/2, 12th main, 3rd cross, Jain Street, opposite to Hanuman temple, Ramesh nagar, Bangalore - 560 020</string>

    <string name="label_reject">Reject</string>
    <string name="label_accept">Accept</string>
    <string name="label_call">Call</string>
    <string name="label_chat">Chat</string>
    <string name="label_upload_pic_invo">Upload Pictures / Invoice</string>
    <string name="label_req_payment">Request Payment</string>
    <string name="label_clear_dues">Clear Dues</string>
    <string name="label_order_in_progress">Order is in Progress</string>
    <string name="label_dues_message">You are charged ₹1 towards paying the company. For more information, read our policy here, Read more</string>

    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_msg">GPS is not enabled. The app needs your device’s location turned on to work properly.</string>
    <string name="label_settings">Settings</string>
    <string name="no_close_app">Cancel</string>
    <string name="label_at_pickup_point">At Pickup Point</string>
    <string name="label_enter_amount">Enter Amount</string>
    <string name="label_mobile_number">Mobile Number</string>

    <!--ERROR MESSAGE-->
    <string name="label_otp_time_out">Resend OTP in : 00:%1$s</string>
    <string name="label_error_enter_mob_num">Please Enter Mobile Number</string>
    <string name="label_enter_otp">Please Enter OTP</string>
    <string name="msg_something_went_wrong">Something went wrong. Please try again</string>
    <string name="msg_otp_sent_successfully">OTP sent successfully</string>
    <string name="msg_login_successfully">Login successfully</string>
    <string name="label_app_Version">Version :  %1$s</string>
    <string name="symbol_rupees">\u20B9</string>
    <string name="symbol_rupees_one">\u20B9 1</string>
    <string name="symbol_rupees_five">\u20B9 5</string>

    <string name="direction_requesting">Direction Requesting…</string>
    <string name="success_with_status">Success with status : %1$s</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="msg_token_fmt">DeviceToken</string>
    <string name="label_pay_service_fees">Pay Service Fees</string>
    <string name="label_total_amount">Total Amount</string>
    <string name="label_do_not_close">Please do not close screen while processing payment.</string>
    <string name="label_retry">Retry</string>
    <string name="msg_something_went_wrong_please_try_again">Something went wrong. Please try again</string>
    <string name="label_payment_failed">Payment Failed</string>
    <string name="label_please_wait">Please wait</string>
    <string name="label_payment_success">Payment Success</string>
    <string name="msg_no_data_available">No data available</string>
    <string name="msg_customer_paid">Customer paid payment amount of \u20B9%1$s and uploaded the screenshot in chat section. Please verify the transaction and confirm the amount has been received.</string>
    <string name="label_please_enter_an_amount">Please enter an amount to paid by customer</string>
</resources>