<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolBarHome"
        layout="@layout/custom_home_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/toolBarHome"
        android:layout_above="@+id/labelPaid"
        android:layout_margin="@dimen/_10sdp"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_payment_request"/>



    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelPaid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editAmount"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/font_inter_medium"
        android:text="@string/label_please_enter_an_amount"
        android:textColor="@color/colorTheme"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/toolBarHome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editAmount"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_above="@+id/btnRequestPayment"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/rounded_border_white"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/label_enter_amount"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/color_toolbar"
        android:textSize="@dimen/_14ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnRequestPayment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/rounded_yellow"
        android:drawablePadding="@dimen/_8sdp"
        android:fontFamily="@font/font_inter_semi_bold"
        android:gravity="center"
        android:text="@string/label_req_payment"
        android:textColor="@color/colorTheme"
        android:textSize="@dimen/_13ssp" />

</RelativeLayout>