<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_inter_bold"
        android:text="@string/label_enter_the_4_digit"
        android:textColor="@color/color_toolbar"
        android:textSize="@dimen/_18ssp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rounded_border"
            android:hint="Enter OTP"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="4"
            android:visibility="gone"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/color_toolbar"
            android:textSize="@dimen/_12ssp" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            app:bar_enabled="false"
            app:bar_height="2dp"
            android:layout_marginTop="@dimen/_10sdp"
            app:length="4"
            app:box_margin="@dimen/_3sdp"
            app:otp_box_background="@drawable/bg_grey_edit_border"
            app:otp_box_background_inactive="@drawable/bg_grey_edit_border"
            app:otp_box_background_active="@drawable/bg_grey_edit_border_active"
            app:otp_text_size="@dimen/_15ssp"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtResendCount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:fontFamily="@font/font_inter_semi_bold"
            android:gravity="center_vertical"
            android:text="@string/label_otp_time_out"
            android:textColor="@color/colorTheme"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnResendCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:fontFamily="@font/font_inter_semi_bold"
            android:gravity="center_vertical"
            android:text="Resend code"
            android:visibility="gone"
            android:textColor="@color/colorTheme"
            android:textSize="@dimen/_14ssp" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_66sdp"
        android:orientation="vertical">

        <include
            android:id="@+id/layoutTerms"
            layout="@layout/layout_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnNext"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/rounded_yellow"
            android:drawablePadding="@dimen/_8sdp"
            android:fontFamily="@font/font_inter_semi_bold"
            android:gravity="center"
            android:text="@string/label_next"
            android:textColor="@color/color_toolbar"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>



</LinearLayout>