<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_8sdp"
    android:background="@drawable/bg_rounded_grey_order">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_14sdp">

            <RelativeLayout
                android:id="@+id/layoutCreated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtCreatedLable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/font_inter_regular"
                    android:text="@string/label_created"
                    android:textColor="@color/color_toolbar"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/txtCreated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_toEndOf="@+id/txtCreatedLable"
                    android:fontFamily="@font/font_inter_bold"
                    android:text="@string/label_date"
                    android:textColor="@color/color_toolbar"
                    android:textSize="@dimen/_11ssp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgExpandView"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_down_arrow" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llEarnDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/layoutCreated">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_dark_bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <TextView
                        android:id="@+id/txtEarnLable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_inter_regular"
                        android:text="@string/label_you_can_earn"
                        android:textColor="@color/color_toolbar"
                        android:textSize="@dimen/_11ssp" />


                    <TextView
                        android:id="@+id/txtEarnAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_inter_semi_bold"
                        android:text="240"
                        android:textColor="@color/colorTheme"
                        android:textSize="@dimen/_20ssp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_dark_bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/_4sdp">

                    <TextView
                        android:id="@+id/txtDistanceLable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/font_inter_regular"
                        android:text="@string/label_distance"
                        android:textColor="@color/color_toolbar"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtDistanceKM"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/font_inter_semi_bold"
                            android:text="0.5"
                            android:textColor="@color/colorTheme"
                            android:textSize="@dimen/_20ssp" />

                        <TextView
                            android:id="@+id/txtUnit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_2sdp"
                            android:fontFamily="@font/font_inter_semi_bold"
                            android:paddingBottom="@dimen/_4sdp"
                            android:text="Km"
                            android:textColor="@color/colorTheme"
                            android:textSize="@dimen/_10ssp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/llEarnDistance"
                tools:itemCount="2"
                tools:listitem="@layout/row_item_chips_tag" />

            <LinearLayout
                android:id="@+id/clPickUpDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvTags">

                <TextView
                    android:id="@+id/txtPickup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_inter_medium"
                    android:text="@string/label_pick_up"
                    android:textColor="@color/colorTheme"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPickUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintTop_toBottomOf="@+id/txtPickup" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rvPickUp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading" />

                <TextView
                    android:id="@+id/txtDeliver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/font_inter_medium"
                    android:text="@string/label_deliver"
                    android:textColor="@color/colorTheme"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressBar" />

                <include
                    android:id="@+id/layoutDeliver"
                    layout="@layout/row_item_deliver_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDeliver" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>